--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>Jungkook of BTS</h3>
+        <img src="images/jkjpg.jpg" alt="jungkook">
+    </div>
 </body>
 </html>
